// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NormalizeFormTableActionOptions should normalize complex form table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": "edit-action",
  "cssClass": null,
  "customComponent": false,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "form": {
    "controlList": [
      {
        "formField": {
          "cssClass": null,
          "directiveList": [],
          "hasClearButton": true,
          "label": null,
          "prefixButton": null,
          "suffixButton": {
            "directiveList": [
              {
                "defaultImport": null,
                "isTypeOnly": false,
                "moduleSpecifier": "@rxap/material-form-system",
                "name": "rxapInputClearButton",
                "namedImport": "InputClearButtonDirective",
                "namespaceImport": null,
              },
            ],
            "icon": "clear",
            "importList": [
              {
                "defaultImport": null,
                "isTypeOnly": false,
                "moduleSpecifier": "@angular/material/icon",
                "name": "MatIconModule",
                "namedImport": null,
                "namespaceImport": null,
              },
              {
                "defaultImport": null,
                "isTypeOnly": false,
                "moduleSpecifier": "@angular/material/button",
                "name": "MatButtonModule",
                "namedImport": null,
                "namespaceImport": null,
              },
            ],
            "svgIcon": null,
          },
        },
        "handlebars": [Function],
        "importList": [
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/material/input",
            "name": "MatInputModule",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/material/icon",
            "name": "MatIconModule",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/material/button",
            "name": "MatButtonModule",
            "namedImport": null,
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@rxap/material-form-system",
            "name": "rxapInputClearButton",
            "namedImport": "InputClearButtonDirective",
            "namespaceImport": null,
          },
          {
            "defaultImport": null,
            "isTypeOnly": false,
            "moduleSpecifier": "@angular/forms",
            "name": "ReactiveFormsModule",
            "namedImport": null,
            "namespaceImport": null,
          },
        ],
        "inputType": "text",
        "isArray": false,
        "isDisabled": false,
        "isOptional": false,
        "isReadonly": false,
        "isRequired": false,
        "kind": "input",
        "label": null,
        "memberList": [],
        "name": "status",
        "placeholder": null,
        "role": "control",
        "source": null,
        "state": null,
        "template": "input-form-control.hbs",
        "type": {
          "defaultImport": null,
          "isTypeOnly": false,
          "moduleSpecifier": null,
          "name": "string",
          "namedImport": null,
          "namespaceImport": null,
        },
        "validatorList": [],
      },
    ],
    "identifier": null,
    "matFormFieldDefaultOptions": null,
    "role": null,
    "window": false,
  },
  "formComponent": "edit-form",
  "formInitial": false,
  "icon": "filter_list",
  "inHeader": false,
  "kind": "form",
  "loadFrom": null,
  "name": "complex-filter",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Edit",
  "type": "edit",
}
`;

exports[`NormalizeFormTableActionOptions should normalize minimal form table action options 1`] = `
{
  "backend": {
    "kind": "none",
  },
  "checkFunction": null,
  "color": null,
  "componentName": null,
  "confirm": false,
  "context": null,
  "controllerName": "edit-action",
  "cssClass": null,
  "customComponent": false,
  "directory": null,
  "errorMessage": null,
  "feature": null,
  "form": {
    "controlList": [],
    "identifier": null,
    "matFormFieldDefaultOptions": null,
    "role": null,
    "window": false,
  },
  "formComponent": "edit-form",
  "formInitial": false,
  "icon": null,
  "inHeader": false,
  "kind": "form",
  "loadFrom": null,
  "name": "filter",
  "nestModule": null,
  "openApi": null,
  "overwrite": false,
  "permission": null,
  "prefix": null,
  "priority": 0,
  "project": "ui-lib",
  "refresh": false,
  "replace": false,
  "scope": null,
  "shared": false,
  "successMessage": null,
  "svgIcon": null,
  "tableName": "user-table",
  "tooltip": "Edit",
  "type": "edit",
}
`;
